# transparency-exchange-api

./: .dprint.json  .gitignore  .goreleaser.yaml  .pre-commit-config.yaml  Makefile  NOTICE  README.md  contributors.md  deps-policy.yaml  graph-schema.json  local-pages-build.sh  local-server.sh  spec  swagger.json
.github/: CODEOWNERS
api/: bomexchangeapi.md
api-flow/: consumer.md  publisher.md
archive/: README.md
auth/: readme.md
dagger/: Cargo.toml
discovery/: readme.md  tea-well-known.schema.json
tea-server/: Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yaml
tea-server/deploy/k8s/: deployment.yaml
tea-server/migrations/: 20240101000000_create_tea_tables.sql  20240102000000_add_deprecation_and_fk.sql  20240103000000_add_audit_trail.sql  20240104000000_add_soft_delete.sql  20240105000000_align_postgres_adapters.sql  20260328000000_enable_versioned_collections.sql
tea-server/src/: harness.rs  lib.rs  main.rs
tea-server/src/application/: mod.rs
tea-server/src/application/consumer/: service.rs
tea-server/src/application/discovery/: service.rs
tea-server/src/application/insights/: service.rs
tea-server/src/application/publisher/: service.rs
tea-server/src/config/: settings.rs
tea-server/src/domain/: mod.rs  tests.rs
tea-server/src/domain/artifact/: entity.rs  repository.rs  service.rs
tea-server/src/domain/collection/: entity.rs  repository.rs  service.rs
tea-server/src/domain/common/: checksum.rs  deprecation.rs  error.rs  identifier.rs  mod.rs  pagination.rs  validation.rs
tea-server/src/domain/component/: entity.rs  repository.rs  service.rs
tea-server/src/domain/product/: entity.rs  mod.rs  repository.rs  service.rs
tea-server/src/infrastructure/: mod.rs
tea-server/src/infrastructure/auth/: bearer.rs  jwt.rs  mod.rs  mtls.rs
tea-server/src/infrastructure/evidence/: attestation.rs  mod.rs  signer.rs
tea-server/src/infrastructure/grpc/: consumer.rs  conversions.rs  discovery.rs  interceptor.rs  mod.rs  publisher.rs
tea-server/src/infrastructure/http/: mod.rs  routes.rs
tea-server/src/infrastructure/middleware/: mod.rs  rate_limit.rs
tea-server/src/infrastructure/observability/: telemetry.rs
tea-server/src/infrastructure/persistence/: mod.rs
tea-server/src/infrastructure/persistence/memory/: artifact_repository.rs  collection_repository.rs  component_repository.rs  mod.rs  product_repository.rs
tea-server/src/infrastructure/persistence/postgres/: artifact_repository.rs  collection_repository.rs  component_repository.rs  mod.rs  product_repository.rs
tea-server/src/infrastructure/persistence/redis/: client.rs
tea-server/src/infrastructure/storage/: mod.rs
tea-server/src/infrastructure/storage/seaweedfs/: client.rs
tea-server/src/interface/: discovery.rs  error.rs  mod.rs
tea-server/src/interface/grpc/: mod.rs
tea-server/src/interface/rest/: mod.rs
tea-server/tests/: e2e_conformance.rs  grpc_smoke.rs  integration.rs  publisher_capability_coverage.rs  publisher_conformance.rs
tea-server/tests/support/: mod.rs
(+119 files in other folders)
